# platform.external.libvpx

./: Android.bp  Android.bp.in  BUILD.bazel  METADATA  OWNERS  README.android  README.version  TEST_MAPPING  WORKSPACE  generate_config.sh  post_update.sh  update_libvpx.sh
bazel/: defs.bzl  download_resource.py  import_libvpx_srcs.py  libvpx_srcs.bzl
config/arm-neon/: vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h  vpx_version.h
config/arm64/: vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
config/generic/: vp8_rtcd.h  vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
config/x86/: vp8_rtcd.h  vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
config/x86_64/: vp8_rtcd.h  vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h  vpx_version.h
libvpx/test/: emu_dev_gmain.cc
test/: encode_api_test.cc
