load("@bazel_skylib//lib:selects.bzl", "selects")
load("@nasm//:bazel/defs.bzl", "nasm_library")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:license_kind.bzl", "license_kind")
load("//bazel:defs.bzl", "download_test_files", "generate_tests")
load(
    "//bazel:libvpx_srcs.bzl",
    "libvpx_arm64_c_srcs",
    "libvpx_x86_64_asm_srcs",
    "libvpx_x86_64_c_srcs",
)

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        ":SPDX-license-identifier-BSD-3-Clause",
    ],
    visibility = [":__subpackages__"],
)

license_kind(
    name = "SPDX-license-identifier-BSD-3-Clause",
    conditions = ["notice"],
    url = "https://spdx.org/licenses/BSD-3-Clause.html",
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "osx_apple",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "osx_intel",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

selects.config_setting_group(
    name = "aarch64",
    match_any = [
        ":linux_aarch64",
        ":osx_apple",
    ],
)

selects.config_setting_group(
    name = "x86_64",
    match_any = [
        ":linux_x86_64",
        ":windows_x86_64",
        ":osx_intel",
    ],
)

DEFAULT_COPTS = [
    "-U_FORTIFY_SOURCE",
    "-D_FORTIFY_SOURCE=0",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-Wall",
    "-Wno-conversion",
    "-Wno-parentheses-equality",
    "-Wno-unused-function",
    "-Wdisabled-optimization",
    "-Wfloat-conversion",
    "-Wformat=2",
    "-Wpointer-arith",
    "-Wtype-limits",
    "-Wcast-qual",
    "-Wvla",
    "-Wimplicit-function-declaration",
    "-Wmissing-declarations",
    "-Wmissing-prototypes",
    "-Wshadow",
    "-Wno-strict-prototypes",
    "-Wuninitialized",
    "-Wunused",
    "-Wextra",
    "-Wundef",
]

INCLUDE_CFG = ["config"] + select({
    ":linux_x86_64": ["config/x86_64"],
    ":windows_x86_64": ["config/x86_64"],
    ":osx_apple": ["config/arm64"],
})

HDRS_CFG = select({
    ":linux_x86_64": [
        "config/x86_64/vp8_rtcd.h",
        "config/x86_64/vp9_rtcd.h",
        "config/x86_64/vpx_config.h",
        "config/x86_64/vpx_dsp_rtcd.h",
        "config/x86_64/vpx_config.asm",
        "config/x86_64/vpx_scale_rtcd.h",
        "config/x86_64/vpx_version.h",
    ],
    ":windows_x86_64": [
        "config/x86_64/vp8_rtcd.h",
        "config/x86_64/vp9_rtcd.h",
        "config/x86_64/vpx_config.h",
        "config/x86_64/vpx_config.asm",
        "config/x86_64/vpx_dsp_rtcd.h",
        "config/x86_64/vpx_scale_rtcd.h",
        "config/x86_64/vpx_version.h",
    ],
    ":osx_apple": [
        "config/arm64/vpx_config.h",
        "config/arm64/vpx_version.h",
        "config/arm64/vp8_rtcd.h",
        "config/arm64/vp9_rtcd.h",
        "config/arm64/vpx_dsp_rtcd.h",
        "config/arm64/vpx_scale_rtcd.h",
    ],
})

nasm_library(
    name = "libvpx_asm",
    srcs = libvpx_x86_64_asm_srcs,
    hdrs = [
        "libvpx/third_party/x86inc/x86inc.asm",
        "libvpx/vpx_dsp/x86/bitdepth_conversion_sse2.asm",
        "libvpx/vpx_ports/x86_abi_support.asm",
    ] + HDRS_CFG,
    includes = INCLUDE_CFG + ["libvpx"],
    output_format = select({
        "@platforms//os:windows": "win64",
        "@platforms//os:linux": "elf64",
        "@platforms//os:macos": "macho64",
    }),
)

# Note that this is a libvpx encoder configured for realtime encoding.
# This is likely not what you want to use for multipass encoders
# such as used in ffmpeg.
cc_library(
    name = "libvpx",
    srcs = select({
        ":x86_64": libvpx_x86_64_c_srcs,
        ":osx_apple": libvpx_arm64_c_srcs,
        "//conditions:default": [],
    }) + glob(["libvpx/**/*.h"]),
    hdrs = HDRS_CFG,
    copts = DEFAULT_COPTS + select({
        ":x86_64": [
            "-mmmx",
            "-mavx2",
        ],
        ":osx_apple": [],
        "//conditions:default": [],
    }),
    includes = INCLUDE_CFG + ["libvpx"],
    linkstatic = 1,
    deps = ["@libyuv"] +
           select({
               ":x86_64": [":libvpx_asm"],
               "//conditions:default": [],
           }),
)

# Vectors needed for the unit tests
TEST_VECTORS = [
    # Encoder test source
    "hantro_collage_w352h288.yuv",
    "hantro_collage_w352h288_nv12.yuv",
    "hantro_odd.yuv",
    "desktop_office1.1280_720-020.yuv",
    "slides_code_term_web_plot.1920_1080.yuv",
    "desktopqvga.320_240.yuv",
    "park_joy_90p_10_420_20f.y4m",
    "park_joy_90p_10_420.y4m",
    "park_joy_90p_10_422_20f.y4m",
    "park_joy_90p_10_422.y4m",
    "park_joy_90p_10_440.yuv",
    "park_joy_90p_10_444_20f.y4m",
    "park_joy_90p_10_444.y4m",
    "park_joy_90p_12_420_20f.y4m",
    "park_joy_90p_12_420.y4m",
    "park_joy_90p_12_422_20f.y4m",
    "park_joy_90p_12_422.y4m",
    "park_joy_90p_12_440.yuv",
    "park_joy_90p_12_444_20f.y4m",
    "park_joy_90p_12_444.y4m",
    "park_joy_90p_8_420_a10-1.y4m",
    "park_joy_90p_8_420.y4m",
    "park_joy_90p_8_422.y4m",
    "park_joy_90p_8_440.yuv",
    "park_joy_90p_8_444.y4m",
    "desktop_credits.y4m",
    "niklas_1280_720_30.y4m",
    "noisy_clip_640_360.y4m",
    "rush_hour_444.y4m",
    "screendata.y4m",
    "niklas_640_480_30.yuv",
    "bus_352x288_420_f20_b8.yuv",
    "crowd_run_360p_10_150f.y4m",

    # Test vectors
    "vp80-00-comprehensive-001.ivf",
    "vp80-00-comprehensive-001.ivf.md5",
    "vp80-00-comprehensive-002.ivf",
    "vp80-00-comprehensive-002.ivf.md5",
    "vp80-00-comprehensive-003.ivf",
    "vp80-00-comprehensive-003.ivf.md5",
    "vp80-00-comprehensive-004.ivf",
    "vp80-00-comprehensive-004.ivf.md5",
    "vp80-00-comprehensive-005.ivf",
    "vp80-00-comprehensive-005.ivf.md5",
    "vp80-00-comprehensive-006.ivf",
    "vp80-00-comprehensive-006.ivf.md5",
    "vp80-00-comprehensive-007.ivf",
    "vp80-00-comprehensive-007.ivf.md5",
    "vp80-00-comprehensive-008.ivf",
    "vp80-00-comprehensive-008.ivf.md5",
    "vp80-00-comprehensive-009.ivf",
    "vp80-00-comprehensive-009.ivf.md5",
    "vp80-00-comprehensive-010.ivf",
    "vp80-00-comprehensive-010.ivf.md5",
    "vp80-00-comprehensive-011.ivf",
    "vp80-00-comprehensive-011.ivf.md5",
    "vp80-00-comprehensive-012.ivf",
    "vp80-00-comprehensive-012.ivf.md5",
    "vp80-00-comprehensive-013.ivf",
    "vp80-00-comprehensive-013.ivf.md5",
    "vp80-00-comprehensive-014.ivf",
    "vp80-00-comprehensive-014.ivf.md5",
    "vp80-00-comprehensive-015.ivf",
    "vp80-00-comprehensive-015.ivf.md5",
    "vp80-00-comprehensive-016.ivf",
    "vp80-00-comprehensive-016.ivf.md5",
    "vp80-00-comprehensive-017.ivf",
    "vp80-00-comprehensive-017.ivf.md5",
    "vp80-00-comprehensive-018.ivf",
    "vp80-00-comprehensive-018.ivf.md5",
    "vp80-01-intra-1400.ivf",
    "vp80-01-intra-1400.ivf.md5",
    "vp80-01-intra-1411.ivf",
    "vp80-01-intra-1411.ivf.md5",
    "vp80-01-intra-1416.ivf",
    "vp80-01-intra-1416.ivf.md5",
    "vp80-01-intra-1417.ivf",
    "vp80-01-intra-1417.ivf.md5",
    "vp80-02-inter-1402.ivf",
    "vp80-02-inter-1402.ivf.md5",
    "vp80-02-inter-1412.ivf",
    "vp80-02-inter-1412.ivf.md5",
    "vp80-02-inter-1418.ivf",
    "vp80-02-inter-1418.ivf.md5",
    "vp80-02-inter-1424.ivf",
    "vp80-02-inter-1424.ivf.md5",
    "vp80-03-segmentation-01.ivf",
    "vp80-03-segmentation-01.ivf.md5",
    "vp80-03-segmentation-02.ivf",
    "vp80-03-segmentation-02.ivf.md5",
    "vp80-03-segmentation-03.ivf",
    "vp80-03-segmentation-03.ivf.md5",
    "vp80-03-segmentation-04.ivf",
    "vp80-03-segmentation-04.ivf.md5",
    "vp80-03-segmentation-1401.ivf",
    "vp80-03-segmentation-1401.ivf.md5",
    "vp80-03-segmentation-1403.ivf",
    "vp80-03-segmentation-1403.ivf.md5",
    "vp80-03-segmentation-1407.ivf",
    "vp80-03-segmentation-1407.ivf.md5",
    "vp80-03-segmentation-1408.ivf",
    "vp80-03-segmentation-1408.ivf.md5",
    "vp80-03-segmentation-1409.ivf",
    "vp80-03-segmentation-1409.ivf.md5",
    "vp80-03-segmentation-1410.ivf",
    "vp80-03-segmentation-1410.ivf.md5",
    "vp80-03-segmentation-1413.ivf",
    "vp80-03-segmentation-1413.ivf.md5",
    "vp80-03-segmentation-1414.ivf",
    "vp80-03-segmentation-1414.ivf.md5",
    "vp80-03-segmentation-1415.ivf",
    "vp80-03-segmentation-1415.ivf.md5",
    "vp80-03-segmentation-1425.ivf",
    "vp80-03-segmentation-1425.ivf.md5",
    "vp80-03-segmentation-1426.ivf",
    "vp80-03-segmentation-1426.ivf.md5",
    "vp80-03-segmentation-1427.ivf",
    "vp80-03-segmentation-1427.ivf.md5",
    "vp80-03-segmentation-1432.ivf",
    "vp80-03-segmentation-1432.ivf.md5",
    "vp80-03-segmentation-1435.ivf",
    "vp80-03-segmentation-1435.ivf.md5",
    "vp80-03-segmentation-1436.ivf",
    "vp80-03-segmentation-1436.ivf.md5",
    "vp80-03-segmentation-1437.ivf",
    "vp80-03-segmentation-1437.ivf.md5",
    "vp80-03-segmentation-1441.ivf",
    "vp80-03-segmentation-1441.ivf.md5",
    "vp80-03-segmentation-1442.ivf",
    "vp80-03-segmentation-1442.ivf.md5",
    "vp80-04-partitions-1404.ivf",
    "vp80-04-partitions-1404.ivf.md5",
    "vp80-04-partitions-1405.ivf",
    "vp80-04-partitions-1405.ivf.md5",
    "vp80-04-partitions-1406.ivf",
    "vp80-04-partitions-1406.ivf.md5",
    "vp80-05-sharpness-1428.ivf",
    "vp80-05-sharpness-1428.ivf.md5",
    "vp80-05-sharpness-1429.ivf",
    "vp80-05-sharpness-1429.ivf.md5",
    "vp80-05-sharpness-1430.ivf",
    "vp80-05-sharpness-1430.ivf.md5",
    "vp80-05-sharpness-1431.ivf",
    "vp80-05-sharpness-1431.ivf.md5",
    "vp80-05-sharpness-1433.ivf",
    "vp80-05-sharpness-1433.ivf.md5",
    "vp80-05-sharpness-1434.ivf",
    "vp80-05-sharpness-1434.ivf.md5",
    "vp80-05-sharpness-1438.ivf",
    "vp80-05-sharpness-1438.ivf.md5",
    "vp80-05-sharpness-1439.ivf",
    "vp80-05-sharpness-1439.ivf.md5",
    "vp80-05-sharpness-1440.ivf",
    "vp80-05-sharpness-1440.ivf.md5",
    "vp80-05-sharpness-1443.ivf",
    "vp80-05-sharpness-1443.ivf.md5",
    "vp80-06-smallsize.ivf",
    "vp80-06-smallsize.ivf.md5",
    "vp90-2-00-quantizer-00.webm",
    "vp90-2-00-quantizer-00.webm.md5",
    "vp90-2-00-quantizer-01.webm",
    "vp90-2-00-quantizer-01.webm.md5",
    "vp90-2-00-quantizer-02.webm",
    "vp90-2-00-quantizer-02.webm.md5",
    "vp90-2-00-quantizer-03.webm",
    "vp90-2-00-quantizer-03.webm.md5",
    "vp90-2-00-quantizer-04.webm",
    "vp90-2-00-quantizer-04.webm.md5",
    "vp90-2-00-quantizer-05.webm",
    "vp90-2-00-quantizer-05.webm.md5",
    "vp90-2-00-quantizer-06.webm",
    "vp90-2-00-quantizer-06.webm.md5",
    "vp90-2-00-quantizer-07.webm",
    "vp90-2-00-quantizer-07.webm.md5",
    "vp90-2-00-quantizer-08.webm",
    "vp90-2-00-quantizer-08.webm.md5",
    "vp90-2-00-quantizer-09.webm",
    "vp90-2-00-quantizer-09.webm.md5",
    "vp90-2-00-quantizer-10.webm",
    "vp90-2-00-quantizer-10.webm.md5",
    "vp90-2-00-quantizer-11.webm",
    "vp90-2-00-quantizer-11.webm.md5",
    "vp90-2-00-quantizer-12.webm",
    "vp90-2-00-quantizer-12.webm.md5",
    "vp90-2-00-quantizer-13.webm",
    "vp90-2-00-quantizer-13.webm.md5",
    "vp90-2-00-quantizer-14.webm",
    "vp90-2-00-quantizer-14.webm.md5",
    "vp90-2-00-quantizer-15.webm",
    "vp90-2-00-quantizer-15.webm.md5",
    "vp90-2-00-quantizer-16.webm",
    "vp90-2-00-quantizer-16.webm.md5",
    "vp90-2-00-quantizer-17.webm",
    "vp90-2-00-quantizer-17.webm.md5",
    "vp90-2-00-quantizer-18.webm",
    "vp90-2-00-quantizer-18.webm.md5",
    "vp90-2-00-quantizer-19.webm",
    "vp90-2-00-quantizer-19.webm.md5",
    "vp90-2-00-quantizer-20.webm",
    "vp90-2-00-quantizer-20.webm.md5",
    "vp90-2-00-quantizer-21.webm",
    "vp90-2-00-quantizer-21.webm.md5",
    "vp90-2-00-quantizer-22.webm",
    "vp90-2-00-quantizer-22.webm.md5",
    "vp90-2-00-quantizer-23.webm",
    "vp90-2-00-quantizer-23.webm.md5",
    "vp90-2-00-quantizer-24.webm",
    "vp90-2-00-quantizer-24.webm.md5",
    "vp90-2-00-quantizer-25.webm",
    "vp90-2-00-quantizer-25.webm.md5",
    "vp90-2-00-quantizer-26.webm",
    "vp90-2-00-quantizer-26.webm.md5",
    "vp90-2-00-quantizer-27.webm",
    "vp90-2-00-quantizer-27.webm.md5",
    "vp90-2-00-quantizer-28.webm",
    "vp90-2-00-quantizer-28.webm.md5",
    "vp90-2-00-quantizer-29.webm",
    "vp90-2-00-quantizer-29.webm.md5",
    "vp90-2-00-quantizer-30.webm",
    "vp90-2-00-quantizer-30.webm.md5",
    "vp90-2-00-quantizer-31.webm",
    "vp90-2-00-quantizer-31.webm.md5",
    "vp90-2-00-quantizer-32.webm",
    "vp90-2-00-quantizer-32.webm.md5",
    "vp90-2-00-quantizer-33.webm",
    "vp90-2-00-quantizer-33.webm.md5",
    "vp90-2-00-quantizer-34.webm",
    "vp90-2-00-quantizer-34.webm.md5",
    "vp90-2-00-quantizer-35.webm",
    "vp90-2-00-quantizer-35.webm.md5",
    "vp90-2-00-quantizer-36.webm",
    "vp90-2-00-quantizer-36.webm.md5",
    "vp90-2-00-quantizer-37.webm",
    "vp90-2-00-quantizer-37.webm.md5",
    "vp90-2-00-quantizer-38.webm",
    "vp90-2-00-quantizer-38.webm.md5",
    "vp90-2-00-quantizer-39.webm",
    "vp90-2-00-quantizer-39.webm.md5",
    "vp90-2-00-quantizer-40.webm",
    "vp90-2-00-quantizer-40.webm.md5",
    "vp90-2-00-quantizer-41.webm",
    "vp90-2-00-quantizer-41.webm.md5",
    "vp90-2-00-quantizer-42.webm",
    "vp90-2-00-quantizer-42.webm.md5",
    "vp90-2-00-quantizer-43.webm",
    "vp90-2-00-quantizer-43.webm.md5",
    "vp90-2-00-quantizer-44.webm",
    "vp90-2-00-quantizer-44.webm.md5",
    "vp90-2-00-quantizer-45.webm",
    "vp90-2-00-quantizer-45.webm.md5",
    "vp90-2-00-quantizer-46.webm",
    "vp90-2-00-quantizer-46.webm.md5",
    "vp90-2-00-quantizer-47.webm",
    "vp90-2-00-quantizer-47.webm.md5",
    "vp90-2-00-quantizer-48.webm",
    "vp90-2-00-quantizer-48.webm.md5",
    "vp90-2-00-quantizer-49.webm",
    "vp90-2-00-quantizer-49.webm.md5",
    "vp90-2-00-quantizer-50.webm",
    "vp90-2-00-quantizer-50.webm.md5",
    "vp90-2-00-quantizer-51.webm",
    "vp90-2-00-quantizer-51.webm.md5",
    "vp90-2-00-quantizer-52.webm",
    "vp90-2-00-quantizer-52.webm.md5",
    "vp90-2-00-quantizer-53.webm",
    "vp90-2-00-quantizer-53.webm.md5",
    "vp90-2-00-quantizer-54.webm",
    "vp90-2-00-quantizer-54.webm.md5",
    "vp90-2-00-quantizer-55.webm",
    "vp90-2-00-quantizer-55.webm.md5",
    "vp90-2-00-quantizer-56.webm",
    "vp90-2-00-quantizer-56.webm.md5",
    "vp90-2-00-quantizer-57.webm",
    "vp90-2-00-quantizer-57.webm.md5",
    "vp90-2-00-quantizer-58.webm",
    "vp90-2-00-quantizer-58.webm.md5",
    "vp90-2-00-quantizer-59.webm",
    "vp90-2-00-quantizer-59.webm.md5",
    "vp90-2-00-quantizer-60.webm",
    "vp90-2-00-quantizer-60.webm.md5",
    "vp90-2-00-quantizer-61.webm",
    "vp90-2-00-quantizer-61.webm.md5",
    "vp90-2-00-quantizer-62.webm",
    "vp90-2-00-quantizer-62.webm.md5",
    "vp90-2-00-quantizer-63.webm",
    "vp90-2-00-quantizer-63.webm.md5",
    "vp90-2-01-sharpness-1.webm",
    "vp90-2-01-sharpness-1.webm.md5",
    "vp90-2-01-sharpness-2.webm",
    "vp90-2-01-sharpness-2.webm.md5",
    "vp90-2-01-sharpness-3.webm",
    "vp90-2-01-sharpness-3.webm.md5",
    "vp90-2-01-sharpness-4.webm",
    "vp90-2-01-sharpness-4.webm.md5",
    "vp90-2-01-sharpness-5.webm",
    "vp90-2-01-sharpness-5.webm.md5",
    "vp90-2-01-sharpness-6.webm",
    "vp90-2-01-sharpness-6.webm.md5",
    "vp90-2-01-sharpness-7.webm",
    "vp90-2-01-sharpness-7.webm.md5",
    "vp90-2-02-size-08x08.webm",
    "vp90-2-02-size-08x08.webm.md5",
    "vp90-2-02-size-08x10.webm",
    "vp90-2-02-size-08x10.webm.md5",
    "vp90-2-02-size-08x16.webm",
    "vp90-2-02-size-08x16.webm.md5",
    "vp90-2-02-size-08x18.webm",
    "vp90-2-02-size-08x18.webm.md5",
    "vp90-2-02-size-08x32.webm",
    "vp90-2-02-size-08x32.webm.md5",
    "vp90-2-02-size-08x34.webm",
    "vp90-2-02-size-08x34.webm.md5",
    "vp90-2-02-size-08x64.webm",
    "vp90-2-02-size-08x64.webm.md5",
    "vp90-2-02-size-08x66.webm",
    "vp90-2-02-size-08x66.webm.md5",
    "vp90-2-02-size-10x08.webm",
    "vp90-2-02-size-10x08.webm.md5",
    "vp90-2-02-size-10x10.webm",
    "vp90-2-02-size-10x10.webm.md5",
    "vp90-2-02-size-10x16.webm",
    "vp90-2-02-size-10x16.webm.md5",
    "vp90-2-02-size-10x18.webm",
    "vp90-2-02-size-10x18.webm.md5",
    "vp90-2-02-size-10x32.webm",
    "vp90-2-02-size-10x32.webm.md5",
    "vp90-2-02-size-10x34.webm",
    "vp90-2-02-size-10x34.webm.md5",
    "vp90-2-02-size-10x64.webm",
    "vp90-2-02-size-10x64.webm.md5",
    "vp90-2-02-size-10x66.webm",
    "vp90-2-02-size-10x66.webm.md5",
    "vp90-2-02-size-16x08.webm",
    "vp90-2-02-size-16x08.webm.md5",
    "vp90-2-02-size-16x10.webm",
    "vp90-2-02-size-16x10.webm.md5",
    "vp90-2-02-size-16x16.webm",
    "vp90-2-02-size-16x16.webm.md5",
    "vp90-2-02-size-16x18.webm",
    "vp90-2-02-size-16x18.webm.md5",
    "vp90-2-02-size-16x32.webm",
    "vp90-2-02-size-16x32.webm.md5",
    "vp90-2-02-size-16x34.webm",
    "vp90-2-02-size-16x34.webm.md5",
    "vp90-2-02-size-16x64.webm",
    "vp90-2-02-size-16x64.webm.md5",
    "vp90-2-02-size-16x66.webm",
    "vp90-2-02-size-16x66.webm.md5",
    "vp90-2-02-size-18x08.webm",
    "vp90-2-02-size-18x08.webm.md5",
    "vp90-2-02-size-18x10.webm",
    "vp90-2-02-size-18x10.webm.md5",
    "vp90-2-02-size-18x16.webm",
    "vp90-2-02-size-18x16.webm.md5",
    "vp90-2-02-size-18x18.webm",
    "vp90-2-02-size-18x18.webm.md5",
    "vp90-2-02-size-18x32.webm",
    "vp90-2-02-size-18x32.webm.md5",
    "vp90-2-02-size-18x34.webm",
    "vp90-2-02-size-18x34.webm.md5",
    "vp90-2-02-size-18x64.webm",
    "vp90-2-02-size-18x64.webm.md5",
    "vp90-2-02-size-18x66.webm",
    "vp90-2-02-size-18x66.webm.md5",
    "vp90-2-02-size-32x08.webm",
    "vp90-2-02-size-32x08.webm.md5",
    "vp90-2-02-size-32x10.webm",
    "vp90-2-02-size-32x10.webm.md5",
    "vp90-2-02-size-32x16.webm",
    "vp90-2-02-size-32x16.webm.md5",
    "vp90-2-02-size-32x18.webm",
    "vp90-2-02-size-32x18.webm.md5",
    "vp90-2-02-size-32x32.webm",
    "vp90-2-02-size-32x32.webm.md5",
    "vp90-2-02-size-32x34.webm",
    "vp90-2-02-size-32x34.webm.md5",
    "vp90-2-02-size-32x64.webm",
    "vp90-2-02-size-32x64.webm.md5",
    "vp90-2-02-size-32x66.webm",
    "vp90-2-02-size-32x66.webm.md5",
    "vp90-2-02-size-34x08.webm",
    "vp90-2-02-size-34x08.webm.md5",
    "vp90-2-02-size-34x10.webm",
    "vp90-2-02-size-34x10.webm.md5",
    "vp90-2-02-size-34x16.webm",
    "vp90-2-02-size-34x16.webm.md5",
    "vp90-2-02-size-34x18.webm",
    "vp90-2-02-size-34x18.webm.md5",
    "vp90-2-02-size-34x32.webm",
    "vp90-2-02-size-34x32.webm.md5",
    "vp90-2-02-size-34x34.webm",
    "vp90-2-02-size-34x34.webm.md5",
    "vp90-2-02-size-34x64.webm",
    "vp90-2-02-size-34x64.webm.md5",
    "vp90-2-02-size-34x66.webm",
    "vp90-2-02-size-34x66.webm.md5",
    "vp90-2-02-size-64x08.webm",
    "vp90-2-02-size-64x08.webm.md5",
    "vp90-2-02-size-64x10.webm",
    "vp90-2-02-size-64x10.webm.md5",
    "vp90-2-02-size-64x16.webm",
    "vp90-2-02-size-64x16.webm.md5",
    "vp90-2-02-size-64x18.webm",
    "vp90-2-02-size-64x18.webm.md5",
    "vp90-2-02-size-64x32.webm",
    "vp90-2-02-size-64x32.webm.md5",
    "vp90-2-02-size-64x34.webm",
    "vp90-2-02-size-64x34.webm.md5",
    "vp90-2-02-size-64x64.webm",
    "vp90-2-02-size-64x64.webm.md5",
    "vp90-2-02-size-64x66.webm",
    "vp90-2-02-size-64x66.webm.md5",
    "vp90-2-02-size-66x08.webm",
    "vp90-2-02-size-66x08.webm.md5",
    "vp90-2-02-size-66x10.webm",
    "vp90-2-02-size-66x10.webm.md5",
    "vp90-2-02-size-66x16.webm",
    "vp90-2-02-size-66x16.webm.md5",
    "vp90-2-02-size-66x18.webm",
    "vp90-2-02-size-66x18.webm.md5",
    "vp90-2-02-size-66x32.webm",
    "vp90-2-02-size-66x32.webm.md5",
    "vp90-2-02-size-66x34.webm",
    "vp90-2-02-size-66x34.webm.md5",
    "vp90-2-02-size-66x64.webm",
    "vp90-2-02-size-66x64.webm.md5",
    "vp90-2-02-size-66x66.webm",
    "vp90-2-02-size-66x66.webm.md5",
    "vp90-2-02-size-130x132.webm",
    "vp90-2-02-size-130x132.webm.md5",
    "vp90-2-02-size-132x130.webm",
    "vp90-2-02-size-132x130.webm.md5",
    "vp90-2-02-size-132x132.webm",
    "vp90-2-02-size-132x132.webm.md5",
    "vp90-2-02-size-178x180.webm",
    "vp90-2-02-size-178x180.webm.md5",
    "vp90-2-02-size-180x178.webm",
    "vp90-2-02-size-180x178.webm.md5",
    "vp90-2-02-size-180x180.webm",
    "vp90-2-02-size-180x180.webm.md5",
    "vp90-2-02-size-lf-1920x1080.webm",
    "vp90-2-02-size-lf-1920x1080.webm.md5",
    "vp90-2-03-deltaq.webm",
    "vp90-2-03-deltaq.webm.md5",
    "vp90-2-03-size-196x196.webm",
    "vp90-2-03-size-196x196.webm.md5",
    "vp90-2-03-size-196x198.webm",
    "vp90-2-03-size-196x198.webm.md5",
    "vp90-2-03-size-196x200.webm",
    "vp90-2-03-size-196x200.webm.md5",
    "vp90-2-03-size-196x202.webm",
    "vp90-2-03-size-196x202.webm.md5",
    "vp90-2-03-size-196x208.webm",
    "vp90-2-03-size-196x208.webm.md5",
    "vp90-2-03-size-196x210.webm",
    "vp90-2-03-size-196x210.webm.md5",
    "vp90-2-03-size-196x224.webm",
    "vp90-2-03-size-196x224.webm.md5",
    "vp90-2-03-size-196x226.webm",
    "vp90-2-03-size-196x226.webm.md5",
    "vp90-2-03-size-198x196.webm",
    "vp90-2-03-size-198x196.webm.md5",
    "vp90-2-03-size-198x198.webm",
    "vp90-2-03-size-198x198.webm.md5",
    "vp90-2-03-size-198x200.webm",
    "vp90-2-03-size-198x200.webm.md5",
    "vp90-2-03-size-198x202.webm",
    "vp90-2-03-size-198x202.webm.md5",
    "vp90-2-03-size-198x208.webm",
    "vp90-2-03-size-198x208.webm.md5",
    "vp90-2-03-size-198x210.webm",
    "vp90-2-03-size-198x210.webm.md5",
    "vp90-2-03-size-198x224.webm",
    "vp90-2-03-size-198x224.webm.md5",
    "vp90-2-03-size-198x226.webm",
    "vp90-2-03-size-198x226.webm.md5",
    "vp90-2-03-size-200x196.webm",
    "vp90-2-03-size-200x196.webm.md5",
    "vp90-2-03-size-200x198.webm",
    "vp90-2-03-size-200x198.webm.md5",
    "vp90-2-03-size-200x200.webm",
    "vp90-2-03-size-200x200.webm.md5",
    "vp90-2-03-size-200x202.webm",
    "vp90-2-03-size-200x202.webm.md5",
    "vp90-2-03-size-200x208.webm",
    "vp90-2-03-size-200x208.webm.md5",
    "vp90-2-03-size-200x210.webm",
    "vp90-2-03-size-200x210.webm.md5",
    "vp90-2-03-size-200x224.webm",
    "vp90-2-03-size-200x224.webm.md5",
    "vp90-2-03-size-200x226.webm",
    "vp90-2-03-size-200x226.webm.md5",
    "vp90-2-03-size-202x196.webm",
    "vp90-2-03-size-202x196.webm.md5",
    "vp90-2-03-size-202x198.webm",
    "vp90-2-03-size-202x198.webm.md5",
    "vp90-2-03-size-202x200.webm",
    "vp90-2-03-size-202x200.webm.md5",
    "vp90-2-03-size-202x202.webm",
    "vp90-2-03-size-202x202.webm.md5",
    "vp90-2-03-size-202x208.webm",
    "vp90-2-03-size-202x208.webm.md5",
    "vp90-2-03-size-202x210.webm",
    "vp90-2-03-size-202x210.webm.md5",
    "vp90-2-03-size-202x224.webm",
    "vp90-2-03-size-202x224.webm.md5",
    "vp90-2-03-size-202x226.webm",
    "vp90-2-03-size-202x226.webm.md5",
    "vp90-2-03-size-208x196.webm",
    "vp90-2-03-size-208x196.webm.md5",
    "vp90-2-03-size-208x198.webm",
    "vp90-2-03-size-208x198.webm.md5",
    "vp90-2-03-size-208x200.webm",
    "vp90-2-03-size-208x200.webm.md5",
    "vp90-2-03-size-208x202.webm",
    "vp90-2-03-size-208x202.webm.md5",
    "vp90-2-03-size-208x208.webm",
    "vp90-2-03-size-208x208.webm.md5",
    "vp90-2-03-size-208x210.webm",
    "vp90-2-03-size-208x210.webm.md5",
    "vp90-2-03-size-208x224.webm",
    "vp90-2-03-size-208x224.webm.md5",
    "vp90-2-03-size-208x226.webm",
    "vp90-2-03-size-208x226.webm.md5",
    "vp90-2-03-size-210x196.webm",
    "vp90-2-03-size-210x196.webm.md5",
    "vp90-2-03-size-210x198.webm",
    "vp90-2-03-size-210x198.webm.md5",
    "vp90-2-03-size-210x200.webm",
    "vp90-2-03-size-210x200.webm.md5",
    "vp90-2-03-size-210x202.webm",
    "vp90-2-03-size-210x202.webm.md5",
    "vp90-2-03-size-210x208.webm",
    "vp90-2-03-size-210x208.webm.md5",
    "vp90-2-03-size-210x210.webm",
    "vp90-2-03-size-210x210.webm.md5",
    "vp90-2-03-size-210x224.webm",
    "vp90-2-03-size-210x224.webm.md5",
    "vp90-2-03-size-210x226.webm",
    "vp90-2-03-size-210x226.webm.md5",
    "vp90-2-03-size-224x196.webm",
    "vp90-2-03-size-224x196.webm.md5",
    "vp90-2-03-size-224x198.webm",
    "vp90-2-03-size-224x198.webm.md5",
    "vp90-2-03-size-224x200.webm",
    "vp90-2-03-size-224x200.webm.md5",
    "vp90-2-03-size-224x202.webm",
    "vp90-2-03-size-224x202.webm.md5",
    "vp90-2-03-size-224x208.webm",
    "vp90-2-03-size-224x208.webm.md5",
    "vp90-2-03-size-224x210.webm",
    "vp90-2-03-size-224x210.webm.md5",
    "vp90-2-03-size-224x224.webm",
    "vp90-2-03-size-224x224.webm.md5",
    "vp90-2-03-size-224x226.webm",
    "vp90-2-03-size-224x226.webm.md5",
    "vp90-2-03-size-226x196.webm",
    "vp90-2-03-size-226x196.webm.md5",
    "vp90-2-03-size-226x198.webm",
    "vp90-2-03-size-226x198.webm.md5",
    "vp90-2-03-size-226x200.webm",
    "vp90-2-03-size-226x200.webm.md5",
    "vp90-2-03-size-226x202.webm",
    "vp90-2-03-size-226x202.webm.md5",
    "vp90-2-03-size-226x208.webm",
    "vp90-2-03-size-226x208.webm.md5",
    "vp90-2-03-size-226x210.webm",
    "vp90-2-03-size-226x210.webm.md5",
    "vp90-2-03-size-226x224.webm",
    "vp90-2-03-size-226x224.webm.md5",
    "vp90-2-03-size-226x226.webm",
    "vp90-2-03-size-226x226.webm.md5",
    "vp90-2-03-size-352x288.webm",
    "vp90-2-03-size-352x288.webm.md5",
    "vp90-2-05-resize.ivf",
    "vp90-2-05-resize.ivf.md5",
    "vp90-2-06-bilinear.webm",
    "vp90-2-06-bilinear.webm.md5",
    "vp90-2-07-frame_parallel.webm",
    "vp90-2-07-frame_parallel.webm.md5",
    "vp90-2-07-frame_parallel-1.webm",
    "vp90-2-07-frame_parallel-1.webm.md5",
    "vp90-2-08-tile-4x1.webm",
    "vp90-2-08-tile-4x1.webm.md5",
    "vp90-2-08-tile-4x4.webm",
    "vp90-2-08-tile-4x4.webm.md5",
    "vp90-2-08-tile_1x2.webm",
    "vp90-2-08-tile_1x2.webm.md5",
    "vp90-2-08-tile_1x2_frame_parallel.webm",
    "vp90-2-08-tile_1x2_frame_parallel.webm.md5",
    "vp90-2-08-tile_1x4.webm",
    "vp90-2-08-tile_1x4.webm.md5",
    "vp90-2-08-tile_1x4_frame_parallel.webm",
    "vp90-2-08-tile_1x4_frame_parallel.webm.md5",
    "vp90-2-08-tile_1x8.webm",
    "vp90-2-08-tile_1x8.webm.md5",
    "vp90-2-08-tile_1x8_frame_parallel.webm",
    "vp90-2-08-tile_1x8_frame_parallel.webm.md5",
    "vp90-2-09-aq2.webm",
    "vp90-2-09-aq2.webm.md5",
    "vp90-2-09-lf_deltas.webm",
    "vp90-2-09-lf_deltas.webm.md5",
    "vp90-2-09-subpixel-00.ivf",
    "vp90-2-09-subpixel-00.ivf.md5",
    "vp90-2-10-show-existing-frame.webm",
    "vp90-2-10-show-existing-frame.webm.md5",
    "vp90-2-10-show-existing-frame2.webm",
    "vp90-2-10-show-existing-frame2.webm.md5",
    "vp90-2-11-size-351x287.webm",
    "vp90-2-11-size-351x287.webm.md5",
    "vp90-2-11-size-351x288.webm",
    "vp90-2-11-size-351x288.webm.md5",
    "vp90-2-11-size-352x287.webm",
    "vp90-2-11-size-352x287.webm.md5",
    "vp90-2-12-droppable_1.ivf",
    "vp90-2-12-droppable_1.ivf.md5",
    "vp90-2-12-droppable_2.ivf",
    "vp90-2-12-droppable_2.ivf.md5",
    "vp90-2-12-droppable_3.ivf",
    "vp90-2-12-droppable_3.ivf.md5",
    "vp90-2-13-largescaling.webm",
    "vp90-2-13-largescaling.webm.md5",
    "vp90-2-14-resize-fp-tiles-1-16.webm",
    "vp90-2-14-resize-fp-tiles-1-16.webm.md5",
    "vp90-2-14-resize-fp-tiles-1-2-4-8-16.webm",
    "vp90-2-14-resize-fp-tiles-1-2-4-8-16.webm.md5",
    "vp90-2-14-resize-fp-tiles-1-2.webm",
    "vp90-2-14-resize-fp-tiles-1-2.webm.md5",
    "vp90-2-14-resize-fp-tiles-1-4.webm",
    "vp90-2-14-resize-fp-tiles-1-4.webm.md5",
    "vp90-2-14-resize-fp-tiles-1-8.webm",
    "vp90-2-14-resize-fp-tiles-1-8.webm.md5",
    "vp90-2-14-resize-fp-tiles-16-1.webm",
    "vp90-2-14-resize-fp-tiles-16-1.webm.md5",
    "vp90-2-14-resize-fp-tiles-16-2.webm",
    "vp90-2-14-resize-fp-tiles-16-2.webm.md5",
    "vp90-2-14-resize-fp-tiles-16-4.webm",
    "vp90-2-14-resize-fp-tiles-16-4.webm.md5",
    "vp90-2-14-resize-fp-tiles-16-8-4-2-1.webm",
    "vp90-2-14-resize-fp-tiles-16-8-4-2-1.webm.md5",
    "vp90-2-14-resize-fp-tiles-16-8.webm",
    "vp90-2-14-resize-fp-tiles-16-8.webm.md5",
    "vp90-2-14-resize-fp-tiles-2-1.webm",
    "vp90-2-14-resize-fp-tiles-2-1.webm.md5",
    "vp90-2-14-resize-fp-tiles-2-16.webm",
    "vp90-2-14-resize-fp-tiles-2-16.webm.md5",
    "vp90-2-14-resize-fp-tiles-2-4.webm",
    "vp90-2-14-resize-fp-tiles-2-4.webm.md5",
    "vp90-2-14-resize-fp-tiles-2-8.webm",
    "vp90-2-14-resize-fp-tiles-2-8.webm.md5",
    "vp90-2-14-resize-fp-tiles-4-1.webm",
    "vp90-2-14-resize-fp-tiles-4-1.webm.md5",
    "vp90-2-14-resize-fp-tiles-4-16.webm",
    "vp90-2-14-resize-fp-tiles-4-16.webm.md5",
    "vp90-2-14-resize-fp-tiles-4-2.webm",
    "vp90-2-14-resize-fp-tiles-4-2.webm.md5",
    "vp90-2-14-resize-fp-tiles-4-8.webm",
    "vp90-2-14-resize-fp-tiles-4-8.webm.md5",
    "vp90-2-14-resize-fp-tiles-8-1.webm",
    "vp90-2-14-resize-fp-tiles-8-1.webm.md5",
    "vp90-2-14-resize-fp-tiles-8-16.webm",
    "vp90-2-14-resize-fp-tiles-8-16.webm.md5",
    "vp90-2-14-resize-fp-tiles-8-2.webm",
    "vp90-2-14-resize-fp-tiles-8-2.webm.md5",
    "vp90-2-14-resize-fp-tiles-8-4.webm",
    "vp90-2-14-resize-fp-tiles-8-4.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-1-2-4-8.webm",
    "vp90-2-14-resize-10frames-fp-tiles-1-2-4-8.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-1-2.webm",
    "vp90-2-14-resize-10frames-fp-tiles-1-2.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-1-4.webm",
    "vp90-2-14-resize-10frames-fp-tiles-1-4.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-1-8.webm",
    "vp90-2-14-resize-10frames-fp-tiles-1-8.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-2-1.webm",
    "vp90-2-14-resize-10frames-fp-tiles-2-1.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-2-4.webm",
    "vp90-2-14-resize-10frames-fp-tiles-2-4.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-2-8.webm",
    "vp90-2-14-resize-10frames-fp-tiles-2-8.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-4-1.webm",
    "vp90-2-14-resize-10frames-fp-tiles-4-1.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-4-2.webm",
    "vp90-2-14-resize-10frames-fp-tiles-4-2.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-4-8.webm",
    "vp90-2-14-resize-10frames-fp-tiles-4-8.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-8-1.webm",
    "vp90-2-14-resize-10frames-fp-tiles-8-1.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-8-2.webm",
    "vp90-2-14-resize-10frames-fp-tiles-8-2.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-8-4-2-1.webm",
    "vp90-2-14-resize-10frames-fp-tiles-8-4-2-1.webm.md5",
    "vp90-2-14-resize-10frames-fp-tiles-8-4.webm",
    "vp90-2-14-resize-10frames-fp-tiles-8-4.webm.md5",
    "vp90-2-15-segkey.webm",
    "vp90-2-15-segkey.webm.md5",
    "vp90-2-15-segkey_adpq.webm",
    "vp90-2-15-segkey_adpq.webm.md5",
    "vp90-2-16-intra-only.webm",
    "vp90-2-16-intra-only.webm.md5",
    "vp90-2-17-show-existing-frame.webm",
    "vp90-2-17-show-existing-frame.webm.md5",
    "vp90-2-18-resize.ivf",
    "vp90-2-18-resize.ivf.md5",
    "vp90-2-19-skip.webm",
    "vp90-2-19-skip.webm.md5",
    "vp90-2-19-skip-01.webm",
    "vp90-2-19-skip-01.webm.md5",
    "vp90-2-19-skip-02.webm",
    "vp90-2-19-skip-02.webm.md5",
    "vp91-2-04-yuv422.webm",
    "vp91-2-04-yuv422.webm.md5",
    "vp91-2-04-yuv440.webm",
    "vp91-2-04-yuv440.webm.md5",
    "vp91-2-04-yuv444.webm",
    "vp91-2-04-yuv444.webm.md5",
    "vp90-2-20-big_superframe-01.webm",
    "vp90-2-20-big_superframe-01.webm.md5",
    "vp90-2-20-big_superframe-02.webm",
    "vp90-2-20-big_superframe-02.webm.md5",
    "vp92-2-20-10bit-yuv420.webm",
    "vp92-2-20-10bit-yuv420.webm.md5",
    "vp92-2-20-12bit-yuv420.webm",
    "vp92-2-20-12bit-yuv420.webm.md5",
    "vp93-2-20-10bit-yuv422.webm",
    "vp93-2-20-10bit-yuv422.webm.md5",
    "vp93-2-20-12bit-yuv422.webm",
    "vp93-2-20-12bit-yuv422.webm.md5",
    "vp93-2-20-10bit-yuv440.webm",
    "vp93-2-20-10bit-yuv440.webm.md5",
    "vp93-2-20-12bit-yuv440.webm",
    "vp93-2-20-12bit-yuv440.webm.md5",
    "vp93-2-20-10bit-yuv444.webm",
    "vp93-2-20-10bit-yuv444.webm.md5",
    "vp93-2-20-12bit-yuv444.webm",
    "vp93-2-20-12bit-yuv444.webm.md5",
    "invalid-bug-1443.ivf",
    "invalid-bug-1443.ivf.res",
    "invalid-bug-148271109.ivf",
    "invalid-bug-148271109.ivf.res",
    "invalid-token-partition.ivf",
    "invalid-token-partition.ivf.res",
    "invalid-vp80-00-comprehensive-018.ivf.2kf_0x6.ivf",
    "invalid-vp80-00-comprehensive-018.ivf.2kf_0x6.ivf.res",
    "invalid-vp80-00-comprehensive-s17661_r01-05_b6-.ivf",
    "invalid-vp80-00-comprehensive-s17661_r01-05_b6-.ivf.res",
    "invalid-vp90-01-v3.webm",
    "invalid-vp90-01-v3.webm.res",
    "invalid-vp90-02-v2.webm",
    "invalid-vp90-02-v2.webm.res",
    "invalid-vp90-03-v3.webm",
    "invalid-vp90-03-v3.webm.res",
    "invalid-vp90-2-00-quantizer-00.webm.ivf.s5861_r01-05_b6-.v2.ivf",
    "invalid-vp90-2-00-quantizer-00.webm.ivf.s5861_r01-05_b6-.v2.ivf.res",
    "invalid-vp90-2-00-quantizer-11.webm.ivf.s52984_r01-05_b6-.ivf",
    "invalid-vp90-2-00-quantizer-11.webm.ivf.s52984_r01-05_b6-.ivf.res",
    "invalid-vp90-2-00-quantizer-11.webm.ivf.s52984_r01-05_b6-z.ivf",
    "invalid-vp90-2-00-quantizer-11.webm.ivf.s52984_r01-05_b6-z.ivf.res",
    "invalid-vp90-2-00-quantizer-63.ivf.kf_65527x61446.ivf",
    "invalid-vp90-2-00-quantizer-63.ivf.kf_65527x61446.ivf.res",
    "invalid-vp90-2-03-size-202x210.webm.ivf.s113306_r01-05_b6-.ivf",
    "invalid-vp90-2-03-size-202x210.webm.ivf.s113306_r01-05_b6-.ivf.res",
    "invalid-vp90-2-03-size-224x196.webm.ivf.s44156_r01-05_b6-.ivf",
    "invalid-vp90-2-03-size-224x196.webm.ivf.s44156_r01-05_b6-.ivf.res",
    "invalid-vp90-2-05-resize.ivf.s59293_r01-05_b6-.ivf",
    "invalid-vp90-2-05-resize.ivf.s59293_r01-05_b6-.ivf.res",
    "invalid-vp90-2-08-tile_1x2_frame_parallel.webm.ivf.s47039_r01-05_b6-.ivf",
    "invalid-vp90-2-08-tile_1x2_frame_parallel.webm.ivf.s47039_r01-05_b6-.ivf.res",
    "invalid-vp90-2-08-tile_1x8_frame_parallel.webm.ivf.s288_r01-05_b6-.ivf",
    "invalid-vp90-2-08-tile_1x8_frame_parallel.webm.ivf.s288_r01-05_b6-.ivf.res",
    "invalid-vp90-2-08-tile_1x4_frame_parallel_all_key.webm",
    "invalid-vp90-2-08-tile_1x4_frame_parallel_all_key.webm.res",
    "invalid-vp90-2-09-aq2.webm.ivf.s3984_r01-05_b6-.v2.ivf",
    "invalid-vp90-2-09-aq2.webm.ivf.s3984_r01-05_b6-.v2.ivf.res",
    "invalid-vp90-2-09-subpixel-00.ivf.s19552_r01-05_b6-.v2.ivf",
    "invalid-vp90-2-09-subpixel-00.ivf.s19552_r01-05_b6-.v2.ivf.res",
    "invalid-vp90-2-09-subpixel-00.ivf.s20492_r01-05_b6-.v2.ivf",
    "invalid-vp90-2-09-subpixel-00.ivf.s20492_r01-05_b6-.v2.ivf.res",
    "invalid-vp90-2-10-show-existing-frame.webm.ivf.s180315_r01-05_b6-.ivf",
    "invalid-vp90-2-10-show-existing-frame.webm.ivf.s180315_r01-05_b6-.ivf.res",
    "invalid-vp90-2-12-droppable_1.ivf.s3676_r01-05_b6-.ivf",
    "invalid-vp90-2-12-droppable_1.ivf.s3676_r01-05_b6-.ivf.res",
    "invalid-vp90-2-12-droppable_1.ivf.s73804_r01-05_b6-.ivf",
    "invalid-vp90-2-12-droppable_1.ivf.s73804_r01-05_b6-.ivf.res",
    "invalid-vp90-2-21-resize_inter_320x180_5_3-4.webm.ivf.s45551_r01-05_b6-.ivf",
    "invalid-vp90-2-21-resize_inter_320x180_5_3-4.webm.ivf.s45551_r01-05_b6-.ivf.res",
    "invalid-vp91-2-mixedrefcsp-444to420.ivf",
    "invalid-vp91-2-mixedrefcsp-444to420.ivf.res",
    "invalid-vp90-2-07-frame_parallel-1.webm",
    "invalid-vp90-2-07-frame_parallel-2.webm",
    "invalid-vp90-2-07-frame_parallel-3.webm",
    "invalid-crbug-629481.webm",
    "invalid-crbug-629481.webm.res",
    "invalid-crbug-1558.ivf",
    "invalid-crbug-1558.ivf.res",
    "invalid-crbug-1562.ivf",
    "invalid-crbug-1562.ivf.res",
    "invalid-crbug-667044.webm",
    "invalid-crbug-667044.webm.res",
    "crbug-1539.rawfile",
    "desktop_640_360_30.yuv",
    # Encode / Decode test
    "niklas_1280_720_30.yuv",
    # BBB VP9 streams
    "vp90-2-bbb_426x240_tile_1x1_180kbps.webm",
    "vp90-2-bbb_640x360_tile_1x2_337kbps.webm",
    "vp90-2-bbb_854x480_tile_1x2_651kbps.webm",
    "vp90-2-bbb_1280x720_tile_1x4_1310kbps.webm",
    "vp90-2-bbb_1920x1080_tile_1x1_2581kbps.webm",
    "vp90-2-bbb_1920x1080_tile_1x4_2586kbps.webm",
    "vp90-2-bbb_1920x1080_tile_1x4_fpm_2304kbps.webm",
    # Sintel VP9 streams
    "vp90-2-sintel_426x182_tile_1x1_171kbps.webm",
    "vp90-2-sintel_640x272_tile_1x2_318kbps.webm",
    "vp90-2-sintel_854x364_tile_1x2_621kbps.webm",
    "vp90-2-sintel_1280x546_tile_1x4_1257kbps.webm",
    "vp90-2-sintel_1920x818_tile_1x4_fpm_2279kbps.webm",
    # TOS VP9 streams
    "vp90-2-tos_426x178_tile_1x1_181kbps.webm",
    "vp90-2-tos_640x266_tile_1x2_336kbps.webm",
    "vp90-2-tos_854x356_tile_1x2_656kbps.webm",
    "vp90-2-tos_854x356_tile_1x2_fpm_546kbps.webm",
    "vp90-2-tos_1280x534_tile_1x4_1306kbps.webm",
    "vp90-2-tos_1280x534_tile_1x4_fpm_952kbps.webm",
    "vp90-2-tos_1920x800_tile_1x4_fpm_2335kbps.webm",

    # VP9 dynamic resizing test (decoder)
    "vp90-2-21-resize_inter_320x180_5_1-2.webm",
    "vp90-2-21-resize_inter_320x180_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_320x180_5_3-4.webm",
    "vp90-2-21-resize_inter_320x180_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_320x180_7_1-2.webm",
    "vp90-2-21-resize_inter_320x180_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_320x180_7_3-4.webm",
    "vp90-2-21-resize_inter_320x180_7_3-4.webm.md5",
    "vp90-2-21-resize_inter_320x240_5_1-2.webm",
    "vp90-2-21-resize_inter_320x240_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_320x240_5_3-4.webm",
    "vp90-2-21-resize_inter_320x240_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_320x240_7_1-2.webm",
    "vp90-2-21-resize_inter_320x240_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_320x240_7_3-4.webm",
    "vp90-2-21-resize_inter_320x240_7_3-4.webm.md5",
    "vp90-2-21-resize_inter_640x360_5_1-2.webm",
    "vp90-2-21-resize_inter_640x360_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_640x360_5_3-4.webm",
    "vp90-2-21-resize_inter_640x360_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_640x360_7_1-2.webm",
    "vp90-2-21-resize_inter_640x360_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_640x360_7_3-4.webm",
    "vp90-2-21-resize_inter_640x360_7_3-4.webm.md5",
    "vp90-2-21-resize_inter_640x480_5_1-2.webm",
    "vp90-2-21-resize_inter_640x480_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_640x480_5_3-4.webm",
    "vp90-2-21-resize_inter_640x480_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_640x480_7_1-2.webm",
    "vp90-2-21-resize_inter_640x480_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_640x480_7_3-4.webm",
    "vp90-2-21-resize_inter_640x480_7_3-4.webm.md5",
    "vp90-2-21-resize_inter_1280x720_5_1-2.webm",
    "vp90-2-21-resize_inter_1280x720_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_1280x720_5_3-4.webm",
    "vp90-2-21-resize_inter_1280x720_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_1280x720_7_1-2.webm",
    "vp90-2-21-resize_inter_1280x720_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_1280x720_7_3-4.webm",
    "vp90-2-21-resize_inter_1280x720_7_3-4.webm.md5",
    "vp90-2-21-resize_inter_1920x1080_5_1-2.webm",
    "vp90-2-21-resize_inter_1920x1080_5_1-2.webm.md5",
    "vp90-2-21-resize_inter_1920x1080_5_3-4.webm",
    "vp90-2-21-resize_inter_1920x1080_5_3-4.webm.md5",
    "vp90-2-21-resize_inter_1920x1080_7_1-2.webm",
    "vp90-2-21-resize_inter_1920x1080_7_1-2.webm.md5",
    "vp90-2-21-resize_inter_1920x1080_7_3-4.webm",
    "vp90-2-21-resize_inter_1920x1080_7_3-4.webm.md5",
    "vp90-2-22-svc_1280x720_3.ivf",
    "vp90-2-22-svc_1280x720_3.ivf.md5",
    "vp90-2-22-svc_1280x720_1.webm",
    "vp90-2-22-svc_1280x720_1.webm.md5",

]

download_test_files(
    name = "generated_resources",
    resource_files = TEST_VECTORS,
)

TESTS = [
    "libvpx/third_party/googletest/src/src/gtest-death-test.cc",
    "libvpx/third_party/googletest/src/src/gtest.cc",
    "libvpx/third_party/googletest/src/src/gtest-typed-test.cc",
    "libvpx/test/vp8_fdct4x4_test.cc",
    "libvpx/test/comp_avg_pred_test.cc",
    "libvpx/test/vpx_scale_test.cc",
    "libvpx/test/aq_segment_test.cc",
    "libvpx/test/quantize_test.cc",
    "libvpx/test/encode_api_test.cc",
    # "libvpx/test/vp8_denoiser_sse2_test.cc", # X86 only
    "libvpx/test/dct32x32_test.cc",
    "libvpx/test/y4m_test.cc",
    "libvpx/test/cpu_speed_test.cc",
    "libvpx/test/vp8_decrypt_test.cc",
    "libvpx/test/vp9_scale_test.cc",
    "libvpx/test/vp9_decrypt_test.cc",
    "libvpx/test/vp9_ethread_test.cc",
    "libvpx/test/dct16x16_test.cc",
    "libvpx/test/dct_partial_test.cc",
    "libvpx/test/vp9_motion_vector_test.cc",
    "libvpx/test/sad_test.cc",
    "libvpx/test/minmax_test.cc",
    "libvpx/test/lpf_test.cc",
    "libvpx/test/vp9_boolcoder_test.cc",
    "libvpx/test/tile_independence_test.cc",
    "libvpx/test/error_resilience_test.cc",
    "libvpx/test/resize_test.cc",
    "libvpx/test/vp9_subtract_test.cc",
    "libvpx/test/datarate_test.cc",
    "libvpx/test/vp8_boolcoder_test.cc",
    "libvpx/test/vp9_block_error_test.cc",
    "libvpx/test/keyframe_test.cc",
    "libvpx/test/idct_test.cc",
    "libvpx/test/predict_test.cc",
    "libvpx/test/variance_test.cc",
    "libvpx/test/superframe_test.cc",
    "libvpx/test/avg_test.cc",
    "libvpx/test/altref_test.cc",
    "libvpx/test/cq_test.cc",
    "libvpx/test/vp9_intrapred_test.cc",
    "libvpx/test/borders_test.cc",
    "libvpx/test/vp9_quantize_test.cc",
    "libvpx/test/partial_idct_test.cc",
    "libvpx/test/vp9_lossless_test.cc",
    "libvpx/test/dct_test.cc",
    "libvpx/test/config_test.cc",
    "libvpx/test/alt_ref_aq_segment_test.cc",
    "libvpx/test/active_map_refresh_test.cc",
    # "libvpx/test/pp_filter_test.cc",
    "libvpx/test/sum_squares_test.cc",
    "libvpx/test/vp8_fragments_test.cc",
    "libvpx/test/idct8x8_test.cc",
    "libvpx/test/fdct8x8_test.cc",
    "libvpx/test/vp9_end_to_end_test.cc",
    "libvpx/test/vp9_arf_freq_test.cc",
    "libvpx/test/decode_api_test.cc",
    "libvpx/test/realtime_test.cc",
    "libvpx/test/convolve_test.cc",
    # "libvpx/test/add_noise_test.cc", X86 only..
    "libvpx/test/hadamard_test.cc",
    "libvpx/test/active_map_test.cc",
    "libvpx/test/level_test.cc",
    # "libvpx/test/test_vector_test.cc",
]

cc_library(
    name = "libvpx_test_tools",
    srcs = [
        "libvpx/ivfenc.c",
        "libvpx/md5_utils.c",
        "libvpx/test/decode_test_driver.cc",
        "libvpx/test/encode_test_driver.cc",
        "libvpx/test/set_roi.cc",

        # We use a custom gmain that will inject the LIBVPX_TEST_DATA_PATH environment
        # variable that will point to the bazel runfiles directory where all the
        # test data can be found.
        "libvpx/test/emu_dev_gmain.cc",
        "libvpx/test/test_vectors.cc",
        "libvpx/test/vp9_encoder_parms_get_to_decoder.cc",
        "libvpx/y4menc.c",
        "libvpx/y4minput.c",
        "libvpx/third_party/googletest/src/src/gtest.cc",
        "libvpx/third_party/googletest/src/src/gtest-death-test.cc",
        "libvpx/third_party/googletest/src/src/gtest-port.cc",
        "libvpx/third_party/googletest/src/src/gtest-filepath.cc",
        "libvpx/third_party/googletest/src/src/gtest-test-part.cc",
        "libvpx/third_party/googletest/src/src/gtest-printers.cc",
    ] + glob([
        "libvpx/**/*.h",
        "libvpx/third_party/googletest/src/**/*.h",
    ]),
    hdrs = [
        "libvpx/ivfenc.h",
        "libvpx/md5_utils.h",
        "libvpx/third_party/googletest/src/src/gtest.cc",
        "libvpx/third_party/googletest/src/src/gtest-death-test.cc",
        "libvpx/third_party/googletest/src/src/gtest-filepath.cc",
        "libvpx/third_party/googletest/src/src/gtest-port.cc",
        "libvpx/third_party/googletest/src/src/gtest-printers.cc",
        "libvpx/third_party/googletest/src/src/gtest-test-part.cc",
        "libvpx/third_party/googletest/src/src/gtest-typed-test.cc",
        "libvpx/tools_common.h",
        "libvpx/webmdec.cc",
        "libvpx/y4menc.h",
        "libvpx/y4minput.h",
        "libvpx/test/test_libvpx.cc"
    ] + glob(["test/*.h"]),
    data = TEST_VECTORS,
    includes = [
        "libvpx/third_party/googletest/src",
        "libvpx/third_party/googletest/src/include",
    ],
    deps = [
        ":libvpx",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

# Note! These tests are extremely slow and will fetch all the dependencies
# (video files)
# what is worse is that the configuration files have configured the encoder
# to be "realtime", which results in various test failures related
# to g_lag_in_frames out of range [..0] and multi pass encoding not existing.
# The tests appear to "assume" that this will be always available, so
# Best use case for these right now is to validate that build works.
generate_tests(
    name = "vpx_suite",
    tests = TESTS,
)
